--- a/FoodDeliveryrestart/Components/App.razor
+++ b/FoodDeliveryrestart/Components/App.razor
@@ -10,13 +10,16 @@
 		<link rel="stylesheet" href="FoodDeliveryrestart.styles.css" />
 		<link rel="icon" type="image/png" href="favicon.png" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css" />
 		<HeadOutlet />
 	</head>
 
 	<body>
 		<Routes />
 		<script src="_framework/blazor.web.js"></script>
+		<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="anonymous"></script>
 		<script src="/geolocation.js"></script>
+		<script src="/js/map.js"></script>
 	</body>
 
 </html>
