--- a/FoodDeliveryrestart/Components/Pages/Home.razor
+++ b/FoodDeliveryrestart/Components/Pages/Home.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @rendermode InteractiveServer
+@attribute [Microsoft.AspNetCore.Authorization.Authorize]
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.EntityFrameworkCore
 @using FoodDeliveryrestart.Domain
